--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#services" class="menu-btn">Favors</a></li>
                 <li><a href="#skills" class="menu-btn">Skills & Education</a></li>
                 <li><a href="#teams" class="menu-btn">My projects</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
+                <li><a href="https://texttohandwriting.com/version-one/" class="menu-btn">Text to Handwriting</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
